@@ -26,7 +26,6 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.UnsupportedEncodingException;
 import java.nio.file.Files;
-import java.util.Arrays;
 
 import org.eclipse.cdt.core.settings.model.CProjectDescriptionEvent;
 import org.eclipse.cdt.core.settings.model.ICBuildSetting;
@@ -39,6 +38,7 @@ import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IResource;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.NullProgressMonitor;
+import org.eclipse.core.runtime.OperationCanceledException;
 import org.eclipse.core.runtime.Path;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
@@ -54,8 +54,6 @@ final class ClangdCompilationDatabaseSetterTest {
 	private static final String EXPANDED_CDB_SETTING = "CompileFlags: {Add: -ferror-limit=500, CompilationDatabase: %s, Compiler: g++}\nDiagnostics:\n  ClangTidy: {Add: modernize*, Remove: modernize-use-trailing-return-type}\n";
 	private static final String DEFAULT_CDB_SETTING = "CompileFlags: {CompilationDatabase: %s}";
 	private static final String MODIFIED_DEFAULT_CDB_SETTING = DEFAULT_CDB_SETTING + "\n";
-	private static final String INVALID_YAML_SYNTAX_CONTAINS_TAB = "CompileFlags:\n\tCompilationDatabase: %s";
-	private static final String INVALID_YAML_SYNTAX_MISSING_BRACE = "CompileFlags: {CompilationDatabase: Release\r\n";
 	private final ClangdCompilationDatabaseSetter clangdCompilationDatabaseSetter = new ClangdCompilationDatabaseSetter();
 	private IProject project;
 
@@ -131,27 +129,29 @@ final class ClangdCompilationDatabaseSetterTest {
 	 *
 	 * @throws IOException
 	 * @throws CoreException
+	 * @throws InterruptedException
+	 * @throws OperationCanceledException
 	 */
 	@Test
-	void testCreateClangdConfigFileInProject() throws IOException, CoreException {
+	void testCreateClangdConfigFileInProject()
+			throws IOException, CoreException, OperationCanceledException, InterruptedException {
 		var projectDir = project.getLocation().toPortableString();
 		var configFile = new File(projectDir, ClangdCompilationDatabaseSetterBase.CLANGD_CONFIG_FILE_NAME);
-		var refFile = createFile(TEMP_DIR, DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT);
 		// The current working directory of the builder in the project is set to RELATIVE_DIR_PATH_BUILD_DEFAULT:
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEFAULT).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
 
 		// GIVEN a project without .clangd project configuration file:
 		assertTrue(configFile.length() == 0);
-		// WHEN the ClangdCProjectDescriptionListenerHandler.handleEvent method gets called:
-		clangdCompilationDatabaseSetter.getCProjectDescriptionListener().handleEvent(event);
+		// WHEN the ClangdCProjectDescriptionListenerHandler.cProjectDescriptionEventExecutor method gets called:
+		var optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventExecutor(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
 		// THEN a new file has been created in the project:
 		assertTrue(configFile.length() > 0);
 		// AND the file content is as expected:
-		assertTrue(Arrays.equals(Files.readAllBytes(configFile.toPath()), Files.readAllBytes(refFile.toPath())));
-
-		//clean up:
-		refFile.delete();
+		assertEquals(String.format(DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT).replaceAll("\\R", "\n"),
+				Files.readString(configFile.toPath()).replaceAll("\\R", "\n"));
 	}
 
 	/**
@@ -159,24 +159,25 @@ final class ClangdCompilationDatabaseSetterTest {
 	 *
 	 * @throws IOException
 	 * @throws CoreException
+	 * @throws InterruptedException
+	 * @throws OperationCanceledException
 	 */
 	@Test
-	void testEmptyClangdConfigFileInProject() throws IOException, CoreException {
-		var refFile = createFile(TEMP_DIR, DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT);
+	void testEmptyClangdConfigFileInProject()
+			throws IOException, CoreException, OperationCanceledException, InterruptedException {
 		// The current working directory of the builder in the project is set to RELATIVE_DIR_PATH_BUILD_DEFAULT:
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEFAULT).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
 
 		// GIVEN an existing but empty .clangd configuration file in the project:
 		var emptyConfigFile = createConfigFile("%s", "  ");
-		// WHEN the ClangdCProjectDescriptionListenerHandler.handleEvent method gets called with a new cdb path "build/debug":
-		clangdCompilationDatabaseSetter.getCProjectDescriptionListener().handleEvent(event);
+		// WHEN the ClangdCompilationDatabaseSetter.cProjectDescriptionEventExecutor method gets called:
+		var optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventExecutor(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
 		// THEN the updated file matches the expected content with the given CompilationDatabase directory "build/debug":
-		assertTrue(Arrays.equals(Files.readAllBytes(emptyConfigFile.getLocation().toFile().toPath()),
-				Files.readAllBytes(refFile.toPath())));
-
-		//clean up:
-		refFile.delete();
+		assertEquals(String.format(DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT).replaceAll("\\R", "\n"),
+				Files.readString(emptyConfigFile.getLocation().toFile().toPath()).replaceAll("\\R", "\n"));
 	}
 
 	/**
@@ -184,40 +185,43 @@ final class ClangdCompilationDatabaseSetterTest {
 	 *
 	 * @throws IOException
 	 * @throws CoreException
+	 * @throws InterruptedException
+	 * @throws OperationCanceledException
 	 */
 	@Test
-	void testUpdateClangdConfigFileInProject() throws IOException, CoreException {
+	void testUpdateClangdConfigFileInProject()
+			throws IOException, CoreException, OperationCanceledException, InterruptedException {
 		var projectDir = project.getLocation().toPortableString();
 		var configFile = new File(projectDir, ClangdCompilationDatabaseSetterBase.CLANGD_CONFIG_FILE_NAME);
-		var refFileDefault = createFile(TEMP_DIR, ".clangdDefault", DEFAULT_CDB_SETTING,
-				RELATIVE_DIR_PATH_BUILD_DEFAULT);
-		// Use MODIFIED_DEFAULT_CDB_SETTING here, because the org.yaml.snakeyaml.Yaml.dump appends a '\n' at the last line:
-		var refFileDebug = createFile(TEMP_DIR, ".clangdDebug", MODIFIED_DEFAULT_CDB_SETTING,
-				RELATIVE_DIR_PATH_BUILD_DEBUG);
+
 		// The current working directory of the builder in the project is set to RELATIVE_DIR_PATH_BUILD_DEFAULT:
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEFAULT).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
 
 		// GIVEN a project without .clangd project configuration file:
 		assertTrue(configFile.length() == 0);
-		// AND the ClangdCProjectDescriptionListenerHandler.handleEvent method gets called:
-		clangdCompilationDatabaseSetter.getCProjectDescriptionListener().handleEvent(event);
+		// AND the ClangdCompilationDatabaseSetter.cProjectDescriptionEventExecutor method gets called:
+		var optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventExecutor(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
 		// THEN a new file has been created in the project:
 		assertTrue(configFile.length() > 0);
 		// THEN the created file matches the expected content:
-		assertTrue(Arrays.equals(Files.readAllBytes(configFile.toPath()), Files.readAllBytes(refFileDefault.toPath())));
+		var expected = String.format(DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT);
+		var actual = Files.readString(configFile.toPath());
+		assertEquals(expected.replaceAll("\\R", "\n"), Files.readString(configFile.toPath()).replaceAll("\\R", "\n"));
 
 		// WHEN the CWD in the build configuration changes to build/debug:
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEBUG).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
 		// AND the handleEvent gets called again:
-		clangdCompilationDatabaseSetter.getCProjectDescriptionListener().handleEvent(event);
-		// THEN the updated file matches the expected content:
-		assertTrue(Arrays.equals(Files.readAllBytes(configFile.toPath()), Files.readAllBytes(refFileDebug.toPath())));
-
-		//clean up:
-		refFileDefault.delete();
-		refFileDebug.delete();
+		optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventExecutor(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
+		// THEN the updated file matches the expected content (use MODIFIED_DEFAULT_CDB_SETTING, because the File.write methods appends \n on every written line):
+		expected = String.format(MODIFIED_DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEBUG);
+		actual = Files.readString(configFile.toPath());
+		assertEquals(expected.replaceAll("\\R", "\n"), actual.replaceAll("\\R", "\n"));
 	}
 
 	/**
@@ -225,69 +229,24 @@ final class ClangdCompilationDatabaseSetterTest {
 	 *
 	 * @throws IOException
 	 * @throws CoreException
+	 * @throws InterruptedException
+	 * @throws OperationCanceledException
 	 */
 	@Test
-	void testUpdateExpandedClangdConfigFileInProject() throws IOException, CoreException {
-		var refFile = createFile(TEMP_DIR, EXPANDED_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEBUG);
-
+	void testUpdateExpandedClangdConfigFileInProject()
+			throws IOException, CoreException, OperationCanceledException, InterruptedException {
 		// GIVEN an existing expanded .clangd configuration file in the project pointing to "build/default":
 		var configFile = createConfigFile(EXPANDED_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT);
-		// WHEN the ClangdCProjectDescriptionListenerHandler.handleEvent method gets called and the builder CWD points to "build/debug":
+		// WHEN the ClangdCompilationDatabaseSetter.cProjectDescriptionEventExecutor method gets called and the builder CWD points to "build/debug":
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEBUG).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
-		clangdCompilationDatabaseSetter.getCProjectDescriptionListener().handleEvent(event);
+		var optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventExecutor(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
 		// THEN the updated file matches the expected content:
-		assertTrue(Arrays.equals(Files.readAllBytes(configFile.getLocation().toFile().toPath()),
-				Files.readAllBytes(refFile.toPath())));
-
-		//clean up:
-		refFile.delete();
-	}
-
-	/**
-	 * Test whether a ScannerException will be thrown if the file contains invalid yaml syntax (here: tab)
-	 *
-	 * @throws IOException
-	 * @throws CoreException
-	 */
-	@Test
-	void testInvalidYamlSyntax() throws IOException, CoreException {
-		// GIVEN an existing .clangd configuration file with invalid yaml syntax (contains tab):
-		var configFile = createConfigFile(INVALID_YAML_SYNTAX_CONTAINS_TAB, RELATIVE_DIR_PATH_BUILD_DEFAULT);
-		String beforeSet;
-		try (var inputStream = configFile.getContents()) {
-			beforeSet = new String(inputStream.readAllBytes());
-		}
-		// WHEN the ClangdConfigurationFileHandlerBase.setCompilationDatabasePath method gets called with a new cdb path "build/debug":
-		clangdCompilationDatabaseSetter.setCompilationDatabase(project, RELATIVE_DIR_PATH_BUILD_DEBUG);
-		// THEN the file has not been changed, because the user shall fix the errors first:
-		try (var inputStream = configFile.getContents()) {
-			var afterSet = new String(inputStream.readAllBytes());
-			assertEquals(beforeSet, afterSet);
-		}
-	}
-
-	/**
-	 * Test whether a ParserException will be thrown if the file contains invalid yaml syntax (here: missing })
-	 *
-	 * @throws IOException
-	 * @throws CoreException
-	 */
-	@Test
-	void testInvalidYamlSyntax2() throws IOException, CoreException {
-		// GIVEN an existing .clangd configuration file with invalid yaml syntax (missing }):
-		var configFile = createConfigFile(INVALID_YAML_SYNTAX_MISSING_BRACE, RELATIVE_DIR_PATH_BUILD_DEFAULT);
-		String beforeSet;
-		try (var inputStream = configFile.getContents()) {
-			beforeSet = new String(inputStream.readAllBytes());
-		}
-		// WHEN the ClangdConfigurationFileHandlerBase.setCompilationDatabasePath method gets called with a new cdb path "build/debug":
-		clangdCompilationDatabaseSetter.setCompilationDatabase(project, RELATIVE_DIR_PATH_BUILD_DEBUG);
-		// THEN the file has not been changed, because the user shall fix the errors first:
-		try (var inputStream = configFile.getContents()) {
-			var afterSet = new String(inputStream.readAllBytes());
-			assertEquals(beforeSet, afterSet);
-		}
+		var expectedContent = String.format(EXPANDED_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEBUG);
+		var modifiedContent = Files.readString(configFile.getLocation().toFile().toPath());
+		assertEquals(expectedContent.replaceAll("\\R", "\n"), modifiedContent.replaceAll("\\R", "\n"));
 	}
 
 }
